--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,9 @@
 
 {cover_print_enabled,true}.
 
-{deps,[]}.
+{deps, [
+    {parse_trans, "", {git, "git://github.com/uwiger/parse_trans.git", {branch, "master"}}}
+]}.
 
 {deps_dir,"deps"}.
 
@@ -15,3 +17,11 @@
 {eunit_opts,[verbose,{report,{eunit_surefire,[{dir,"."}]}}]}.
 
 {xref_checks,[undefined_function_calls]}.
+
+{relx, [{release, {decorate_rel, "0.0.1"},
+    [decorator_pt, parse_trans]},
+
+    {dev_mode, true},
+    {include_erts, false},
+
+    {extended_start_script, true}]}.
