at least it compiles -_-

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 {cover_print_enabled,true}.
 
 {deps, [
-    {parse_trans, "", {git, "git://github.com/uwiger/parse_trans.git", {branch, "master"}}}
+    {parse_trans, "", {git, "git://github.com/nicoster/parse_trans.git", {branch, "partial-expand"}}}
 ]}.
 
 {deps_dir,"deps"}.
